--- a/kaskad/production/utvh/hvo/mnemo-hvo1.htm
+++ b/kaskad/production/utvh/hvo/mnemo-hvo1.htm
@@ -107,11 +107,11 @@
                 </div>
                 <div class="modal-content__link-container">
                   <a class="modal-content__link-download"
-                    href="http://Techsite6/kaskad/production/utvh/hvo/content/schemes1/IM2300_hvo1.dwg"
-                    download>Скачать DWG</a>
+                    href="http://Techsite6/kaskad/production/utvh/hvo/content/schemes1/IM2300_hvo1.dwg" download>Скачать
+                    DWG</a>
                   <a class="modal-content__link-download"
-                    href="http://Techsite6/kaskad/production/utvh/hvo/content/schemes1/IM2300_hvo1.pdf"
-                    download>Скачать PDF</a>
+                    href="http://Techsite6/kaskad/production/utvh/hvo/content/schemes1/IM2300_hvo1.pdf" download>Скачать
+                    PDF</a>
                 </div>
               </li>
               <li class="modal__accordion-content-item">
@@ -213,8 +213,8 @@
 
       <div class="mnemo__param mnemo__tooltip rashod-vody-na-ustanovky">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=7 PasspID=1 Precision=1> -->
-          25
+          <#PasspValue PasspType=7 PasspID=1 Precision=1>
+
         </span>
         <span class="mnemo__param-naimenov">м3/ч</span>
         <div class="mnemo__param-clue rashod-vody-na-ustanovky-clue">
@@ -230,8 +230,10 @@
             </div>
             <div class="mnemo__param-clue-div">Расход:
               <span class="mnemo__param-clue-span">
-                <br>Qнаим=0,75 м3/ч<br>
-                Qперех=1,5 м3/ч<br>
+                <br>Qнаим=0,75 м3/ч
+                <br>
+                Qперех=1,5 м3/ч
+                <br>
                 Qнаиб=150 м3/ч
               </span>
             </div>
@@ -322,8 +324,8 @@
 
       <div class="mnemo__param mnemo__tooltip rashod-vody-na-promyvky">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=8 PasspID=1 Precision=1> -->
-          25
+          <#PasspValue PasspType=8 PasspID=1 Precision=1>
+
         </span>
         <span class="mnemo__param-naimenov">м3/ч</span>
         <div class="mnemo__param-clue rashod-vody-na-promyvky-clue">
@@ -413,8 +415,7 @@
 
       <div class="mnemo__param zadanie-uroven-e1-1-2">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=1 PasspID=19 Precision=0> -->
-          50
+          <#PasspValue PasspType=1 PasspID=19 Precision=0>
         </span>
         <span class="mnemo__param-naimenov">%</span>
       </div>
@@ -422,23 +423,20 @@
       <!-- pumps -->
       <div class="mnemo__param n1-1-percent">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=1 PasspID=11 Precision=0> -->
-          90
+          <#PasspValue PasspType=1 PasspID=11 Precision=0>
         </span>
         <span class="mnemo__param-naimenov">%</span>
       </div>
       <div class="mnemo__param n1-1-hz">
-        <!-- <#PasspValue PasspType=1 PasspID=12 Precision=0> -->
         <span class="mnemo__param-text">
-          10
+          <#PasspValue PasspType=1 PasspID=12 Precision=0>
         </span>
         <span class="mnemo__param-naimenov">Гц</span>
       </div>
 
       <div class="mnemo__param n1-2-percent">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=1 PasspID=13 Precision=0> -->
-          20
+          <#PasspValue PasspType=1 PasspID=13 Precision=0>
         </span>
         <span class="mnemo__param-naimenov">%</span>
       </div>
@@ -451,8 +449,7 @@
 
       <div class="mnemo__param n2-1-percent">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=1 PasspID=15 Precision=0> -->
-          70
+          <#PasspValue PasspType=1 PasspID=15 Precision=0>
         </span>
         <span class="mnemo__param-naimenov">%</span>
       </div>
@@ -466,15 +463,14 @@
 
       <div class="mnemo__param n2-2-percent">
         <span class="mnemo__param-text">
-          <!-- <#PasspValue PasspType=1 PasspID=17 Precision=0> -->
-          50
+          <#PasspValue PasspType=1 PasspID=17 Precision=0>
+
         </span>
         <span class="mnemo__param-naimenov">%</span>
       </div>
       <div class="mnemo__param n2-2-hz">
-        <!-- <#PasspValue PasspType=1 PasspID=18 Precision=0> -->
         <span class="mnemo__param-text">
-          5
+          <#PasspValue PasspType=1 PasspID=18 Precision=0>
         </span>
         <span class="mnemo__param-naimenov">Гц</span>
       </div>
